--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
   </head>
   <body class="bg-slate-50 dark:bg-gray-900">
     <div id="root"></div>
-    <script type="module" src="/index-complete.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
